--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test.e2e": "cypress run",
-    "test.unit": "vitest",
+    "cypress open": "cypress open",
+    "cypress": "cypress run",
+    "test": "vitest",
     "lint": "eslint"
   },
   "dependencies": {
