--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "cypress open": "cypress open",
+    "cypress:open": "cypress open",
     "cypress": "cypress run",
     "test": "vitest",
     "lint": "eslint"
