--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-native-nfc-manager": "^3.15.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
@@ -56,5 +57,5 @@
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
-  "description": "An Ionic project"
+  "description": "An enigmx project"
 }
