--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/core": "^6.8.0",
+    "@awesome-cordova-plugins/nfc": "^6.8.0",
     "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "^5.7.0",
@@ -27,6 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
     "ionicons": "^7.0.0",
+    "phonegap-nfc": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
