feat: upgraded capacitor v to 6

--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "dependencies": {
     "@awesome-cordova-plugins/core": "^6.8.0",
     "@awesome-cordova-plugins/nfc": "^6.8.0",
-    "@capacitor/android": "^5.7.0",
-    "@capacitor/app": "5.0.7",
-    "@capacitor/core": "^5.7.0",
-    "@capacitor/haptics": "5.0.7",
-    "@capacitor/keyboard": "5.0.8",
-    "@capacitor/status-bar": "5.0.7",
+    "@capacitor/android": "6.1.2",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
+    "community-cordova-plugin-nfc": "^1.4.0",
     "ionicons": "^7.0.0",
-    "phonegap-nfc": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
@@ -37,7 +37,7 @@
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.7.0",
+    "@capacitor/cli": "^6.0.0",
     "@eslint/js": "^9.9.1",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
