--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
     "community-cordova-plugin-nfc": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -43,6 +44,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^5.0.0",
