chore: adding gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@
 !/.vscode/extensions.json
 .idea
 /platform-tools
+android/release.jks
+android/release.jks.base64
 
 npm-debug.log*
 yarn-debug.log*
