--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint",
     "prepare": "husky",
     "prep:ionic": "ionic cap sync && ionic cap open android",
-    "install:device": "sh ./scripts/installonDevice.sh",
+    "install:device": " ionic cap sync && sh ./scripts/installonDevice.sh",
     "log:device:error": "sh ./scripts/showLogsDevice.sh",
     "createIcons": "npx capacitor-assets generate"
   },
