--- a/.github/workflows/buildAAB.yml
+++ b/.github/workflows/buildAAB.yml
@@ -30,7 +30,7 @@ jobs:
        run: npm install
 
      - name: Build app
-       run: npm run build
+       run: npm run build --prod
 
      - name: Capacitor copy
        run: npx cap copy
