build: new name and icons

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.nachogl1.enigmx"
+    namespace "com.nachogl1.enigma"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.nachogl1.enigmx"
+        applicationId "com.nachogl1.enigma"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
