--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enigmx",
+  "name": "enigma",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -26,6 +26,7 @@
     "@capacitor/core": "^6.0.0",
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/splash-screen": "^6.0.2",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
@@ -66,5 +67,5 @@
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
-  "description": "An enigmx project"
+  "description": "An enigma project"
 }
